better swap customization